--- a/config.toml
+++ b/config.toml
@@ -2,23 +2,23 @@
 
 baseURL = "https://velvety-lolly-e5670e.netlify.app/"
 languageCode = "en"
-title = "John Doe"
+title = "Ryan Lang"
 enableGitInfo = false
 googleAnalytics = "UA-XXXXXXX-Y"
 
 [params]
-    author = "John Doe"
-    description = "Demo Resume"
-    og_image = "better-software.png"
-    twitterName = "@bascodes"
-    ghRepo = "https://github.com/codewithbas/resume/"
+    author = "Ryan Lang"
+    description = "Official Resume"
+    og_image = "Original.jpg"
+    twitterName = "@rlang05"
+    ghRepo = ""
     hugoRepo = "https://github.com/gohugoio/hugo/"
 
     [params.profile]
         enable = true
         name = "Ryan Lang"
         tagline = "Resume"
-        avatar = "bas-steins-2.jpg"
+        avatar = "Crop.jpg"
 
     [params.contact]
         enable = true
