--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
         university = "Salem Middle School"
         dates = "2017-2019"
         [[params.education.list]]
-        degree = "Transferred to"
+        degree = "Transferred from Salem Elementary School and Graduated from"
         university = "Turner Creek Elementary"
         dates = "2016"
         [[params.education.list]]
