--- a/config.toml
+++ b/config.toml
@@ -181,7 +181,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
 
     [params.information]
-        enable = false
+        enable = true
 
         [[params.information.list]]
         title = "Family History"
